--- a/index.html
+++ b/index.html
@@ -478,6 +478,25 @@
             </li>
           </ul>
         </div>
+        <div class="footer-form">
+          <p class="footer-social">Subscribe</p>
+          <form class="footer-form-object">
+            <label class="footer-form-label">
+              <input
+                type="email"
+                name="email"
+                placeholder="E-mail"
+                class="footer-form-input"
+              />
+            </label>
+            <button type="submit" class="footer-form-button">
+              Subscribe
+              <svg class="footer-button-svg" width="24" height="24">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
