--- a/index.html
+++ b/index.html
@@ -499,5 +499,90 @@
         </div>
       </div>
     </footer>
+    <div class="modal">
+      <div class="modal-window">
+        <button type="button" class="modal-button">
+          <svg class="modal-svg" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-p"></p>
+        <form>
+          <div class="window-modal-form">
+            <label for="user-name" class="window-modal-label">
+              Name
+              <div class="window-label-div">
+                <input
+                  type="text"
+                  id="user-name"
+                  name="user-name"
+                  class="window-label-input"
+                />
+                <svg class="window-label-svg" width="18" height="24">
+                  <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+          <div class="window-modal-form">
+            <label for="user-name" class="window-modal-label">
+              Phone
+              <div class="window-label-div">
+                <input
+                  type="text"
+                  id="user-name"
+                  name="user-name"
+                  class="window-label-input"
+                />
+                <svg class="window-label-svg" width="18" height="24">
+                  <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+          <div class="window-modal-form">
+            <label for="user-name" class="window-modal-label">
+              Email
+              <div class="window-label-div">
+                <input
+                  type="text"
+                  id="user-name"
+                  name="user-name"
+                  class="window-label-input"
+                />
+                <svg class="window-label-svg" width="18" height="24">
+                  <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+              </div>
+            </label>
+          </div>
+          <div class="window-label-div-textaria">
+            <label for="user-coment" class="window-modal-label">
+              Comment
+              <textarea
+                name="user-comment"
+                id="user-comment"
+                placeholder="Text input"
+                class="window-label-div-textaria"
+                cols="30"
+                rows="10"
+              ></textarea>
+            </label>
+          </div>
+          <div class="window-label-div-checkbox">
+            <input
+              type="checkbox"
+              id="user-privacy"
+              value="true"
+              name="user-privacy"
+              class="visually-hidden"
+            />
+            <label class="window-label-privacy" for="user-privacy"
+              >I accept the terms and conditions of the</label
+            >
+          </div>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
