--- a/index.html
+++ b/index.html
@@ -509,52 +509,46 @@
         <p class="modal-p"></p>
         <form>
           <div class="window-modal-form">
-            <label for="user-name" class="window-modal-label">
-              Name
-              <div class="window-label-div">
-                <input
-                  type="text"
-                  id="user-name"
-                  name="user-name"
-                  class="window-label-input"
-                />
-                <svg class="window-label-svg" width="18" height="24">
-                  <use href="./images/icons.svg#icon-close"></use>
-                </svg>
-              </div>
-            </label>
+            <label for="user-name" class="window-modal-label"> Name </label>
+            <div class="window-label-div">
+              <input
+                type="text"
+                id="user-name"
+                name="user-name"
+                class="window-label-input"
+              />
+              <svg class="window-label-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-close"></use>
+              </svg>
+            </div>
           </div>
           <div class="window-modal-form">
-            <label for="user-name" class="window-modal-label">
-              Phone
-              <div class="window-label-div">
-                <input
-                  type="text"
-                  id="user-name"
-                  name="user-name"
-                  class="window-label-input"
-                />
-                <svg class="window-label-svg" width="18" height="24">
-                  <use href="./images/icons.svg#icon-close"></use>
-                </svg>
-              </div>
-            </label>
+            <label for="user-name" class="window-modal-label"> Phone </label>
+            <div class="window-label-div">
+              <input
+                type="text"
+                id="user-name"
+                name="user-name"
+                class="window-label-input"
+              />
+              <svg class="window-label-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-close"></use>
+              </svg>
+            </div>
           </div>
           <div class="window-modal-form">
-            <label for="user-name" class="window-modal-label">
-              Email
-              <div class="window-label-div">
-                <input
-                  type="text"
-                  id="user-name"
-                  name="user-name"
-                  class="window-label-input"
-                />
-                <svg class="window-label-svg" width="18" height="24">
-                  <use href="./images/icons.svg#icon-close"></use>
-                </svg>
-              </div>
-            </label>
+            <label for="user-name" class="window-modal-label"> Email </label>
+            <div class="window-label-div">
+              <input
+                type="text"
+                id="user-name"
+                name="user-name"
+                class="window-label-input"
+              />
+              <svg class="window-label-svg" width="18" height="24">
+                <use href="./images/icons.svg#icon-close"></use>
+              </svg>
+            </div>
           </div>
           <div class="window-label-div-textaria">
             <label for="user-coment" class="window-modal-label">
