--- a/index.html
+++ b/index.html
@@ -551,17 +551,17 @@
             </div>
           </div>
           <div class="window-label-div-textaria">
-            <label for="user-coment" class="window-modal-label">
+            <label for="user-comment" class="window-modal-label">
               Comment
-              <textarea
-                name="user-comment"
-                id="user-comment"
-                placeholder="Text input"
-                class="window-label-div-textaria"
-                cols="30"
-                rows="10"
-              ></textarea>
             </label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              placeholder="Text input"
+              class="window-label-div-textaria"
+              cols="30"
+              rows="10"
+            ></textarea>
           </div>
           <div class="window-label-div-checkbox">
             <input
@@ -571,10 +571,17 @@
               name="user-privacy"
               class="visually-hidden"
             />
-            <label class="window-label-privacy" for="user-privacy"
-              >I accept the terms and conditions of the</label
-            >
+            <label class="window-label-privacy" for="user-privacy">
+              <span class="window-label-privacy-span">
+                <svg class="window-label-privacy-svg" width="10" height="8">
+                  <use href="./images/icons.svg#icon-close"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="" class="window-label-privacy-a">Privacy Policy</a>
+            </label>
           </div>
+          <button class="window-label-privacy-button">Send</button>
         </form>
       </div>
     </div>
