--- a/index.html
+++ b/index.html
@@ -518,35 +518,35 @@
                 class="window-label-input"
               />
               <svg class="window-label-svg" width="18" height="24">
-                <use href="./images/icons.svg#icon-close"></use>
+                <use href="./images/icons.svg#icon-Name"></use>
               </svg>
             </div>
           </div>
           <div class="window-modal-form">
-            <label for="user-name" class="window-modal-label"> Phone </label>
+            <label for="user-phone" class="window-modal-label"> Phone </label>
             <div class="window-label-div">
               <input
                 type="text"
-                id="user-name"
-                name="user-name"
+                id="user-phone"
+                name="user-phone"
                 class="window-label-input"
               />
               <svg class="window-label-svg" width="18" height="24">
-                <use href="./images/icons.svg#icon-close"></use>
+                <use href="./images/icons.svg#icon-Phone"></use>
               </svg>
             </div>
           </div>
           <div class="window-modal-form">
-            <label for="user-name" class="window-modal-label"> Email </label>
+            <label for="user-email" class="window-modal-label"> Email </label>
             <div class="window-label-div">
               <input
                 type="text"
-                id="user-name"
-                name="user-name"
+                id="user-email"
+                name="user-email"
                 class="window-label-input"
               />
               <svg class="window-label-svg" width="18" height="24">
-                <use href="./images/icons.svg#icon-close"></use>
+                <use href="./images/icons.svg#icon-Email"></use>
               </svg>
             </div>
           </div>
@@ -558,7 +558,7 @@
               name="user-comment"
               id="user-comment"
               placeholder="Text input"
-              class="window-label-div-textaria"
+              class="window-label-textaria"
               cols="30"
               rows="10"
             ></textarea>
@@ -569,12 +569,12 @@
               id="user-privacy"
               value="true"
               name="user-privacy"
-              class="visually-hidden"
+              class="user-privacy-input visually-hidden"
             />
             <label class="window-label-privacy" for="user-privacy">
               <span class="window-label-privacy-span">
                 <svg class="window-label-privacy-svg" width="10" height="8">
-                  <use href="./images/icons.svg#icon-close"></use>
+                  <use href="./images/icons.svg#icon-check"></use>
                 </svg>
               </span>
               I accept the terms and conditions of the
