--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="about-team-title">Strategy</h3>
+              <h3 class="features-title">Strategy</h3>
               <p class="section-paragraph">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
@@ -104,7 +104,7 @@
                   <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="about-team-title">Punctuality</h3>
+              <h3 class="features-title">Punctuality</h3>
               <p class="section-paragraph">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
@@ -116,7 +116,7 @@
                   <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="about-team-title">Diligence</h3>
+              <h3 class="features-title">Diligence</h3>
               <p class="section-paragraph">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
@@ -128,7 +128,7 @@
                   <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="about-team-title">Technologies</h3>
+              <h3 class="features-title">Technologies</h3>
               <p class="section-paragraph">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
@@ -150,7 +150,9 @@
               />
               <div class="about-team-text">
                 <h3 class="about-team-title">Mark Guerrero</h3>
-                <p class="section-paragraph text-align">Product Designer</p>
+                <p class="section-paragraph text-align about-team-paragraph">
+                  Product Designer
+                </p>
                 <ul class="about-team-ul">
                   <li class="about-team-li">
                     <a href="" class="social-link">
@@ -192,7 +194,9 @@
               />
               <div class="about-team-text">
                 <h3 class="about-team-title">Tom Ford</h3>
-                <p class="section-paragraph text-align">Frontend Developer</p>
+                <p class="section-paragraph text-align about-team-paragraph">
+                  Frontend Developer
+                </p>
                 <ul class="about-team-ul">
                   <li class="about-team-li">
                     <a href="" class="social-link">
@@ -234,7 +238,9 @@
               />
               <div class="about-team-text">
                 <h3 class="about-team-title">Camila Garcia</h3>
-                <p class="section-paragraph text-align">Marketing</p>
+                <p class="section-paragraph text-align about-team-paragraph">
+                  Marketing
+                </p>
                 <ul class="about-team-ul">
                   <li class="about-team-li">
                     <a href="" class="social-link">
@@ -276,7 +282,9 @@
               />
               <div class="about-team-text">
                 <h3 class="about-team-title">Daniel Wilson</h3>
-                <p class="section-paragraph text-align">UI Designer</p>
+                <p class="section-paragraph text-align about-team-paragraph">
+                  UI Designer
+                </p>
                 <ul class="about-team-ul">
                   <li class="about-team-li">
                     <a href="" class="social-link">
@@ -506,7 +514,7 @@
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
-        <p class="modal-p"></p>
+        <p class="modal-p">Leave your contacts and we will call you back</p>
         <form>
           <div class="window-modal-form">
             <label for="user-name" class="window-modal-label"> Name </label>
@@ -581,7 +589,9 @@
               <a href="" class="window-label-privacy-a">Privacy Policy</a>
             </label>
           </div>
-          <button class="window-label-privacy-button">Send</button>
+          <button class="window-label-privacy-button" type="submit">
+            Send
+          </button>
         </form>
       </div>
     </div>
